Add mockito/bytebuddy